docs/css/style.css
body,
html {
margin:0;
padding:0;
color:#222;
background:#f6f6ff;
font-family: "Lato", sans-serif;
}

#main a:link { color: #685860; text-decoration: none; }
#main a:visited { color: #586068; text-decoration: none; }
#main a:hover { color: #586068; text-decoration: underline; }

#outer { background: #f6f6ff; width: 800px; margin:0 auto; }

#main { background: #f6f6ff; width: 790px; float: right; padding: 5px; }

/* Main top horizontal navigation bar */

#navbar { background: #f6f6ff; float: left; width: 800px; float; left; padding: 4px; }
#navbar { border-bottom:3px solid #505050; }
#navbar a { 
  display:inline-block;
  width: 190px;
  padding: 1px;
  margin: 1px; 
  font-family: "Questrial", sans-serif;
  font-style: normal;
  text-decoration: none;
  text-align: left;
  font-size: medium;
  border-left: 1px #555 solid;
  border-right: 1px #555 solid;
  border-top: 1px #555 solid;
  border-bottom: 1px #555 solid;
}
#navbar a:link,a:visited { color: #303840; text-decoration: none; }
#navbar a:hover { color: #202830; text-decoration: none; background: #e0e0f0; }

/* Section headers */
div.section-header {
  width: 100%;
  background: #d0d0e0;
  padding: .2em;
  margin: .2em 0 .2em 0;
}

div.section-header p {
  font-variant: small-caps;
  font-size: large;
  margin: 0 0 0 0;
  font-family: "Questrial", sans-serif;
  font-style: normal;
  text-decoration: none;
  text-align: left;
}

/* Header */

#header {
  background: #d0d0e0;
  clear:both;
  float:left;
  width:100%;
  padding: 0 0 .5em 0;
  margin: 0;
  border-bottom:3px solid #505050;
}
#header p,
#header h1,
#header h2,
#header h3,
#header h4 {
  padding:.25em .25em 0 .25em;
  margin:0;
  font-family: "Questrial", sans-serif;
  font-style: normal;
  text-decoration: none;
  text-align: left
}
#header a:link { color: #303840; text-decoration: none; }
#header a:visited { color: #202830; text-decoration: none; }
#header a:hover { color: #404850;  text-decoration: underline; }

/* Footer */

#footer {
  background: #d0d0e0;
  clear:both;
  float:left;
  width:100%;
  padding: .2em 0 .2em 0;
  border-top: 3px solid #505050;
}
#footer p {
  padding:.2em .2em 0 .2em;
  margin:0;
  font-family: "Questrial", sans-serif;
  font-style: normal;
  text-decoration: none;
  text-align: left;
}
#footer div {
  font-family: "Questrial", sans-serif;
  font-style: normal;
  text-decoration: none; 
}
#footer a:link { color: #303840; text-decoration: none; }
#footer a:visited { color: #202830; text-decoration: none; }
#footer a:hover { color: #404850;  text-decoration: underline; }

